# Dual

./: .gitignore  CMakeLists.txt  Clock.h  Codual.h  Dual.h  DualDirectional.h  DualScalar.h  README.md  SparseDual.h  dual.h  main.cpp  test_bennett5.cpp  test_boxbod.cpp  test_eckerle4.cpp  test_mgh09.cpp  test_mgh10.cpp  test_rat42.cpp  test_rat43.cpp  test_thurber.cpp
tests_grad/: test_bennett5.cpp  test_boxbod.cpp  test_eckerle4.cpp  test_mgh09.cpp  test_mgh10.cpp  test_rat42.cpp  test_rat43.cpp  test_thurber.cpp
tests_hess/: test_mgh09.cpp
